# canokey-esp32

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  partitions.csv
main/: CMakeLists.txt  canokey-esp32.c  dcd_esp32sx.c  dcd_esp32sx.h  device-config.h  littlefs_api.c  littlefs_api.h  usbd_conf.c
